--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,8 +2,8 @@ userFlightDataRelatedCaching=true
 hostname=localhost
 port=27017
 dbname=acmeair_bookingdb
-#username=dbuser
-#password=1234
+username=dbuser
+password=1234
 loader.maxDaysToScheduleFlights=5
 loader.timeout=180
 loader.numCustomers=10000
